tests/rosetta/transpiler/Java/constrained-genericity-4.error
compile: exit status 1
/tmp/TestJavaTranspiler_Rosetta_Goldenconstrained-genericity-43165775599/001/Main.java:40: error: incompatible types: Object cannot be converted to PeelFirst
        peelFirstEat(f0);
                     ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
